@startuml Architektur_Grob
skinparam Style strictuml
skinparam genericDisplay old
skinparam classAttributeIconSize 0
skinparam monochrome true

component ContactSplitter{

    component View {
        class BaseWindow<VM extends BaseViewModel>
        class MainWindow
        class TitleWindow
        class SalutationWindow
    }

    component ViewModel {
        class BaseViewModel
        class MainWindowViewModel
        class TitleWindowViewModel
        class SalutationWindowViewModel
    }

    component Controller {
        class BaseWindowController<V extends BaseWindow, VM extends BaseViewModel>
        class MainWindowController
        class TitleWindowController
        class SalutationWindowController
    }

    component Model{
        class Contact
        class ParseResult<M>
        enum Gender<<enum>>
    }

    component Service {
        class TitleService
        class SalutationService
        class ParserService
        class LetterSalutationService
    }
}

hide methods
hide fields

'view
BaseWindow <|-- MainWindow
BaseWindow <|-- TitleWindow
BaseWindow <|-- SalutationWindow

'viewModel
BaseViewModel <|-- MainWindowViewModel
BaseViewModel <|-- TitleWindowViewModel
BaseViewModel <|-- SalutationWindowViewModel

'controller
BaseWindowController <|-- MainWindowController
BaseWindowController <|-- TitleWindowController
BaseWindowController <|-- SalutationWindowController

'associations
View <-- Controller
Service <-- Controller
Controller --> ViewModel
Service --> Model
ViewModel --> Model

@enduml